--- a/assets/scss/_component.projectBlock.scss
+++ b/assets/scss/_component.projectBlock.scss
@@ -146,7 +146,7 @@
 	position: fixed;
 	z-index: 10;
 	top: 50%;
-	right: 0;
+	right: 24px;
 	padding-right: inherit;
 	transform: translateY(-50%);
 
