--- a/assets/scss/_vendor.flickity.scss
+++ b/assets/scss/_vendor.flickity.scss
@@ -20,6 +20,10 @@ https://flickity.metafizzy.co
 	width: 100%;
 	height: 100%;
 	margin: 0 ($pad * 4);
+
+	@include media("<mlarge") {
+		margin: 0 $pad;
+	}
   }
   
   /* draggable */
